package Visitor;

public interface ProjectElement {
    public void beWritten(Developer developer);
}
